# dr_wandb

./: .example.env  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
docs/: processes
docs/processes/: CODING_PRINCIPLES.md  README.md  audit_synthesis_pipeline.md  design_philosophy.md  documentation_organizer_guide.md  fresh_eyes_review_guide.md  general_project_extraction_prompt.md  project_consolidation_methodology.md  reporting_guide.md  strategic_collaboration_guide.md  tactical_execution_guide.md
scripts/: benchmark_runs_pages.py  download_project.py
src/dr_wandb/: __init__.py  cli.py  config.py  constants.py  downloader.py  engine.py  export_profile.py  fetch.py  history.py  history_entry_record.py  patch_ops.py  raw_extract.py  results.py  run_metadata.py  run_record.py  selection.py  state.py  store.py  sync_engine.py  sync_policy.py  sync_state.py  sync_types.py  utils.py  wandb_downloader.py  wandb_run.py  wandb_store.py
src/dr_wandb/cli/: download.py  export.py  raw_extract.py  sync.py
src/dr_wandb/export/: __init__.py  engine.py  export_manifest.py  export_modes.py  export_paths.py  export_request.py  export_state.py  export_summary.py  history_export.py  loaders.py  models.py  policy.py  record_store.py  run_selection.py  run_snapshot.py  store.py  wandb_run.py
src/dr_wandb/shared/: parquet.py  serialization.py
tests/: conftest.py  helpers.py  test_cli.py  test_cli_download.py  test_cli_export.py  test_cli_raw_extract.py  test_cli_sync.py  test_engine.py  test_export_engine.py  test_export_loaders.py  test_export_models.py  test_export_paths.py  test_fetch.py  test_history_entry_record.py  test_models.py  test_patch_ops.py  test_raw_extract.py  test_record_store.py  test_run_metadata.py  test_run_record.py  test_store.py  test_sync_engine.py  test_sync_state.py  test_utils.py
