[project]
name = "dr-wandb"
version = "1.1.1"
description = "Policy-driven sync and export toolkit for W&B runs"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Danielle Rothermel", email = "danielle.rothermel@gmail.com" }
]
requires-python = ">=3.12"
keywords = ["wandb", "weights-and-biases", "machine-learning", "experiment-tracking"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "pandas>=2.3.2",
    "pyarrow>=21.0.0",
    "pydantic>=2.0.0",
    "srsly>=2.5.2",
    "typer>=0.20.0",
    "wandb>=0.25.0",
]

[project.urls]
Homepage = "https://github.com/drothermel/dr_wandb"
Repository = "https://github.com/drothermel/dr_wandb"

[project.scripts]
wandb-export = "dr_wandb.cli.export:export_main"
wandb-bootstrap-export = "dr_wandb.cli.export:bootstrap_export_main"
wandb-extract-raw = "dr_wandb.cli.raw_extract:extract_raw_main"
wandb-sync = "dr_wandb.cli.sync:sync_main"
wandb-inspect-state = "dr_wandb.cli.sync:inspect_state_main"
wandb-plan-patches = "dr_wandb.cli.sync:plan_patches_main"
wandb-apply-patches = "dr_wandb.cli.sync:apply_patches_main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build]
exclude = [
  "docs",
  "docs/**",
]

[tool.hatch.build.targets.wheel]
packages = ["src/dr_wandb"]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "ruff>=0.9.0",
    "ty>=0.0.14",
]

[tool.ruff]
include = [
    "src/**/*.py",
    "tests/**/*.py",
]
line-length = 88
cache-dir = ".ruff_cache"
exclude = ["outputs/*", "notebooks/*", "plots/*", "data/*", "docs/*"]

[tool.ruff.format]
indent-style = "space"
quote-style = "double"
